--- a/sites/all/themes/newhopeks/less/page.less
+++ b/sites/all/themes/newhopeks/less/page.less
@@ -67,7 +67,6 @@
 	    }
 
     	.navbar-collapse {
-	        overflow: visible;
 	        max-height: none;
     	    padding: 0;
     	    color: white;
